Add title tags & bugfix for localstorage

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -575,6 +575,10 @@ dialog[data-name='athena-dialog'] {
               color: $darkgray;
             }
 
+            button:disabled {
+              color: $neutral;
+            }
+
             button:hover {
               color: $darkgray-xx-dark;
             }
