--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -617,13 +617,13 @@ dialog[data-name='athena-dialog'] {
     section[data-name='additional-information'] {
       border-left: 1px solid lightgray;
       height: 100%;
-      padding: 2.5rem 1.5rem 0 2.5rem;
+      padding-left: 1rem;
 
       div[data-name='info-container'] {
         height: 80%;
 
         div[data-name='mappedRows'] {
-          max-height: 50%;
+          max-height: 40%;
           overflow-y: auto;
           margin: 0.5rem 0 2rem 0;
 
@@ -659,12 +659,15 @@ dialog[data-name='athena-dialog'] {
           display: flex;
           flex-direction: column;
           gap: 1rem;
+          width: 90%;
+          margin: 0;
 
           div[data-name='autocomplete-input'] {
             input {
               border: 1px solid $neutral-x-light;
               font-size: 1rem;
               padding: 0.5rem 1rem;
+              width: 90%;
             }
 
             input:hover {
@@ -716,6 +719,7 @@ dialog[data-name='athena-dialog'] {
             border: 1px solid $neutral-x-light;
             resize: none;
             border-radius: 10px;
+            width: 90%;
           }
 
           textarea:hover {
