Drag & drop when no file is uploaded

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -750,3 +750,15 @@ td[data-name='actions-grid'] {
     justify-content: center;
   }
 }
+
+div[data-name="drag-drop"] {
+  width: 100%;
+  height: auto;
+
+  div[data-name='drag-drop-container'] {
+    width: min-content;
+    margin: auto;
+    padding: 10rem 0;
+    z-index: 10;
+  }
+}
