custom concepts added

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -751,7 +751,7 @@ td[data-name='actions-grid'] {
   }
 }
 
-div[data-name="drag-drop"] {
+div[data-name='drag-drop'] {
   width: 100%;
   height: auto;
 
@@ -761,4 +761,8 @@ div[data-name="drag-drop"] {
     padding: 10rem 0;
     z-index: 10;
   }
+}
+
+div[data-name='custom-concepts'] {
+  display: none;
 }
