css for table component added

--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -21,6 +21,13 @@ $brightblue: #0094d3;
 $brightblue-x-dark: #0082ba;
 $brightblue-xx-dark: #0070a0;
 
+$primary-xx-light: #85dcff;
+$primary-x-light: #33c9ff;
+$primary: #0094d3;
+$gray-xx-light: #ededed;
+$gray-x-light: #d3d3d3;
+$gray-xx-dark: #333333;
+
 body {
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
@@ -730,17 +737,23 @@ dialog[data-name='athena-dialog'] {
   }
 }
 
-td[data-name='actions'] {
-  display: flex;
-  align-items: center;
-}
-
 td[data-name='actions-grid'] {
   display: grid;
   grid-template-columns: repeat(3, min-content);
   grid-template-rows: repeat(2, min-content);
   width: max-content;
   padding-right: 1.5rem;
+
+  button {
+    cursor: pointer;
+    border-radius: 5px;
+    border-color: $gray-x-light;
+    border-width: 1px;
+    justify-content: center;
+    text-align: center;
+    font-size: 0.75em;
+    height: 25px;
+  }
 
   div[data-name='numberOfConceptIds'] {
     border: 1px solid $darkgray;
@@ -765,4 +778,297 @@ div[data-name='drag-drop'] {
 
 div[data-name='custom-concepts'] {
   display: none;
+}
+
+div[data-component='full-datatable'] {
+  display: block;
+  box-sizing: border-box;
+  overscroll-behavior: contain;
+  outline: none;
+  position: relative;
+  user-select: none;
+
+  div[data-component='svelte-radar-datatable'] {
+    box-sizing: border-box;
+    overflow-x: auto;
+    max-width: 100vw;
+
+    table {
+      //width:0 breaks table component array as data source and file as data source
+      //line-height: 20px;
+      border-collapse: separate;
+      table-layout: fixed;
+      margin: 0;
+      empty-cells: show;
+      border: 0px;
+      //width: 0;
+      border-spacing: 0px;
+
+      thead {
+        display: table-header-group;
+        vertical-align: middle;
+        background-color: inherit;
+
+        tr[data-name='titles'] {
+          th:hover {
+            background-color: $gray-xx-light;
+          }
+
+          th[data-name='action-Column'] {
+            width: 75px;
+          }
+        }
+
+        tr[data-name='filters'] {
+          th {
+            padding-bottom: 5px;
+          }
+        }
+
+        tr {
+          display: table-row;
+          padding: 0.35em;
+          font-size: 12px;
+
+          th {
+            display: table-cell;
+            box-sizing: content-box;
+
+            div[data-name='column-reposition'] {
+              display: flex;
+
+              :first-child {
+                flex: 1 1 auto;
+              }
+
+              input {
+                background-color: #fff;
+                border-radius: 5px;
+                border-color: $gray-x-light;
+                border-width: 1px;
+                font-size: 0.75rem;
+                box-shadow: inset 0 0.0625 0.125em rgba(10, 10, 10, 0.05);
+                color: #363636;
+                height: 25px;
+                padding: 0 0.5rem;
+              }
+
+              button {
+                cursor: pointer;
+                background-color: inherit;
+                border: none;
+                height: auto;
+              }
+
+              button:hover {
+                background-color: $gray-x-light;
+              }
+            }
+
+            div[data-name='column-resize'] {
+              display: flex;
+
+              div[data-name='column-resize-right'] {
+                flex: 0 0 auto;
+                width: 3px;
+                cursor: col-resize;
+              }
+
+              div[data-name='column-reposition'] {
+                flex: 1 1 auto;
+              }
+
+              div[data-name='column-resize-left'] {
+                flex: 0 0 auto;
+                width: 3px;
+                cursor: col-resize;
+              }
+            }
+          }
+        }
+      }
+
+      tfoot {
+        tr[data-name='pagination'] {
+          vertical-align: bottom;
+
+          th {
+            div {
+              display: flex;
+              align-items: center;
+
+              button[data-name='settings-button'] {
+                border: none;
+                background-color: inherit;
+              }
+
+              button[data-name='settings-button']:hover {
+                background-color: $gray-x-light;
+              }
+
+              div[data-name='pagination-container'] {
+                width: 100%;
+                margin-left: 5px;
+
+                p {
+                  padding-right: 5px;
+                  padding-left: 5px;
+                }
+
+                select {
+                  cursor: pointer;
+                  display: inline-block;
+                  font-size: 1em;
+                  max-width: 100%;
+                  outline: 0;
+                  height: 25px;
+                  align-self: center;
+                  border-radius: 5px;
+                  border: solid 1px $gray-xx-dark;
+                }
+              }
+
+              div[data-name='pagination-container-pages'] {
+                margin-left: auto;
+                text-align: right;
+                float: right;
+                height: 30px;
+                margin-top: 5px;
+                padding: 0;
+
+                button {
+                  border: none;
+                  border-radius: 5px;
+                  background-color: inherit;
+
+                  &:not([data-active='true']):hover:enabled {
+                    background-color: #333;
+                    color: #fff;
+                    border: none;
+                  }
+
+                  &[data-active='true'] {
+                    color: #333;
+                    font-weight: bolder;
+                    padding-bottom: 2.8px;
+                  }
+
+                  &:disabled {
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      tbody {
+        display: table-row-group;
+        vertical-align: middle;
+        border-color: inherit;
+
+        tr:nth-child(even) {
+          background: #fff;
+        }
+
+        tr:nth-child(odd) {
+          background: #e2e8f3;
+        }
+
+        tr:hover {
+          background-color: $gray-x-light;
+        }
+
+        tr {
+          td {
+            @keyframes moving-gradient {
+              0% {
+                background-position: -250px 0;
+              }
+
+              100% {
+                background-position: 250px 0;
+              }
+            }
+
+            div[data-name='cell'] {
+              display: flex;
+
+              textarea {
+                flex: 1 1 auto;
+              }
+
+              button {
+                height: inherit;
+                border: none;
+              }
+            }
+
+            p {
+              display: block;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              margin: 0;
+            }
+
+            input {
+              border-radius: 5px;
+              font-size: 0.75rem;
+              box-shadow: inset 0 0.0625 0.125em rgba(10, 10, 10, 0.05);
+              background-color: #fff;
+              border-color: $gray-x-light;
+              color: #363636;
+              height: 2.5em;
+              display: inline-flex;
+              border: 0.2px solid;
+              justify-content: flex-start;
+              height: 25px;
+              padding: 0 0.5rem;
+            }
+          }
+        }
+
+        div[data-name='info'] {
+          left: 50%;
+          text-align: center;
+        }
+      }
+    }
+  }
+}
+
+dialog[data-name='settings-dialog'] {
+  border: none;
+  border-radius: 10px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 50%;
+
+  button[data-name='close-button'] {
+    position: absolute;
+    right: 0;
+    margin-right: 1rem;
+    border: none;
+    background-color: inherit;
+    cursor: pointer;
+  }
+
+  div[data-name='modal-dialog'] {
+    overflow-y: initial;
+  }
+
+  div[data-name='modal-body'] {
+    position: absolute;
+    overflow-y: auto;
+    display: block;
+
+    div {
+      display: flex;
+      align-items: center;
+    }
+  }
 }
