--- a/src/lib/styles/table.scss
+++ b/src/lib/styles/table.scss
@@ -21,13 +21,6 @@ $brightblue: #0094d3;
 $brightblue-x-dark: #0082ba;
 $brightblue-xx-dark: #0070a0;
 
-$primary-xx-light: #85dcff;
-$primary-x-light: #33c9ff;
-$primary: #0094d3;
-$gray-xx-light: #ededed;
-$gray-x-light: #d3d3d3;
-$gray-xx-dark: #333333;
-
 body {
   font-family: BlinkMacSystemFont, -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
@@ -510,12 +503,17 @@ dialog[data-name='athena-dialog'] {
               }
 
               input {
-                border: 1px solid $darkgray;
+                border: 1px solid $neutral-x-light;
               }
 
               input:hover {
                 cursor: pointer;
-                border: 1px solid $darkgray-xx-dark;
+                border: 1px solid $neutral-xx-dark;
+              }
+
+              input:focus {
+                outline: none;
+                box-shadow: 0 0 0 2px $neutral-x-dark;
               }
             }
           }
@@ -540,6 +538,16 @@ dialog[data-name='athena-dialog'] {
               background-color: inherit;
               border: none;
               color: white;
+              cursor: pointer;
+            }
+
+            button:hover {
+              background-color: $neutral-x-light;
+            }
+
+            button:focus {
+              outline: none;
+              box-shadow: 0 0 0 2px $neutral-x-dark;
             }
           }
         }
@@ -610,6 +618,61 @@ dialog[data-name='athena-dialog'] {
           overflow-y: auto;
           table {
             overflow-y: auto;
+          }
+        }
+      }
+      div[data-name='custom-concept-container'] {
+        border-top: 1px solid lightgray;
+        padding: 1rem 1rem 3rem 1rem;
+
+        h2 {
+          font-size: 24px;
+          font-weight: 600;
+          margin: 0;
+          padding: 0 2rem;
+        }
+
+        table {
+          tr {
+            td {
+              input {
+                padding: 0 0.5rem;
+                border-radius: 5px;
+                font-size: 0.75rem;
+                height: 25px;
+                border: 1px solid $neutral-x-light;
+              }
+
+              input:hover {
+                border: 1px solid $neutral-xx-dark;
+              }
+
+              input:focus {
+                outline: none;
+                box-shadow: 0 0 0 2px $neutral-x-dark;
+              }
+            }
+
+            td[data-name='custom-concept-actions'] {
+              button {
+                cursor: pointer;
+                border-radius: 5px;
+                border: 1px solid $neutral-x-light;
+                justify-content: center;
+                text-align: center;
+                font-size: 0.75em;
+                height: 25px;
+              }
+
+              button:hover {
+                background-color: $neutral-x-light;
+              }
+
+              button:focus {
+                outline: none;
+                box-shadow: 0 0 0 2px $neutral-x-dark;
+              }
+            }
           }
         }
       }
@@ -737,33 +800,6 @@ dialog[data-name='athena-dialog'] {
   }
 }
 
-td[data-name='actions-grid'] {
-  display: grid;
-  grid-template-columns: repeat(3, min-content);
-  grid-template-rows: repeat(2, min-content);
-  width: max-content;
-  padding-right: 1.5rem;
-
-  button {
-    cursor: pointer;
-    border-radius: 5px;
-    border-color: $gray-x-light;
-    border-width: 1px;
-    justify-content: center;
-    text-align: center;
-    font-size: 0.75em;
-    height: 25px;
-  }
-
-  div[data-name='numberOfConceptIds'] {
-    border: 1px solid $darkgray;
-    border-radius: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
 div[data-name='drag-drop'] {
   width: 100%;
   height: auto;
@@ -811,7 +847,7 @@ div[data-component='full-datatable'] {
 
         tr[data-name='titles'] {
           th:hover {
-            background-color: $gray-xx-light;
+            background-color: $neutral-xx-light;
           }
 
           th[data-name='action-Column'] {
@@ -844,13 +880,19 @@ div[data-component='full-datatable'] {
               input {
                 background-color: #fff;
                 border-radius: 5px;
-                border-color: $gray-x-light;
-                border-width: 1px;
+                border: 1px solid $neutral-x-light;
                 font-size: 0.75rem;
-                box-shadow: inset 0 0.0625 0.125em rgba(10, 10, 10, 0.05);
-                color: #363636;
                 height: 25px;
                 padding: 0 0.5rem;
+              }
+
+              input:hover {
+                border: 1px solid $neutral-xx-dark;
+              }
+
+              input:focus {
+                outline: none;
+                box-shadow: 0 0 0 2px $neutral-x-dark;
               }
 
               button {
@@ -861,7 +903,12 @@ div[data-component='full-datatable'] {
               }
 
               button:hover {
-                background-color: $gray-x-light;
+                background-color: $neutral-x-light;
+              }
+
+              button:focus {
+                outline: none;
+                box-shadow: 0 0 0 2px $neutral-x-dark;
               }
             }
 
@@ -903,7 +950,12 @@ div[data-component='full-datatable'] {
               }
 
               button[data-name='settings-button']:hover {
-                background-color: $gray-x-light;
+                background-color: $neutral-x-light;
+              }
+
+              button[data-name='settings-button']:focus {
+                outline: none;
+                box-shadow: 0 0 0 2px $neutral-x-dark;
               }
 
               div[data-name='pagination-container'] {
@@ -924,7 +976,7 @@ div[data-component='full-datatable'] {
                   height: 25px;
                   align-self: center;
                   border-radius: 5px;
-                  border: solid 1px $gray-xx-dark;
+                  border: solid 1px $neutral-xx-dark;
                 }
               }
 
@@ -952,9 +1004,15 @@ div[data-component='full-datatable'] {
                     font-weight: bolder;
                     padding-bottom: 2.8px;
                   }
+                }
 
-                  &:disabled {
-                  }
+                button:hover {
+                  background-color: $neutral-x-light;
+                }
+
+                button:focus {
+                  outline: none;
+                  box-shadow: 0 0 0 2px $neutral-x-dark;
                 }
               }
             }
@@ -976,10 +1034,66 @@ div[data-component='full-datatable'] {
         }
 
         tr:hover {
-          background-color: $gray-x-light;
+          background-color: $neutral-x-light;
         }
 
         tr {
+          td[data-name='actions-grid'] {
+            display: grid;
+            grid-template-columns: repeat(3, min-content);
+            grid-template-rows: repeat(2, min-content);
+            width: max-content;
+            padding-right: 1.5rem;
+
+            button {
+              cursor: pointer;
+              border-radius: 5px;
+              border: 1px solid $neutral-x-light;
+              justify-content: center;
+              text-align: center;
+              font-size: 0.75em;
+              height: 25px;
+            }
+
+            button:hover {
+              background-color: $neutral-x-light;
+            }
+
+            button:focus {
+              outline: none;
+              box-shadow: 0 0 0 2px $neutral-x-dark;
+            }
+
+            div[data-name='numberOfConceptIds'] {
+              border: 1px solid $darkgray;
+              border-radius: 100%;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            }
+          }
+
+          td[data-name='actions'] {
+            button {
+              cursor: pointer;
+              border-radius: 5px;
+              border: 1px solid $neutral-x-light;
+              justify-content: center;
+              text-align: center;
+              font-size: 0.75em;
+              height: 25px;
+            }
+
+            button:hover {
+              background-color: $neutral-x-dark;
+            }
+
+            button:focus {
+              outline: none;
+              box-shadow: 0 0 0 2px $neutral-xx-dark;
+            }
+          }
+
           td {
             @keyframes moving-gradient {
               0% {
@@ -991,39 +1105,11 @@ div[data-component='full-datatable'] {
               }
             }
 
-            div[data-name='cell'] {
-              display: flex;
-
-              textarea {
-                flex: 1 1 auto;
-              }
-
-              button {
-                height: inherit;
-                border: none;
-              }
-            }
-
             p {
               display: block;
               overflow: hidden;
               text-overflow: ellipsis;
               margin: 0;
-            }
-
-            input {
-              border-radius: 5px;
-              font-size: 0.75rem;
-              box-shadow: inset 0 0.0625 0.125em rgba(10, 10, 10, 0.05);
-              background-color: #fff;
-              border-color: $gray-x-light;
-              color: #363636;
-              height: 2.5em;
-              display: inline-flex;
-              border: 0.2px solid;
-              justify-content: flex-start;
-              height: 25px;
-              padding: 0 0.5rem;
             }
           }
         }
@@ -1050,11 +1136,20 @@ dialog[data-name='settings-dialog'] {
 
   button[data-name='close-button'] {
     position: absolute;
-    right: 0;
-    margin-right: 1rem;
+    right: 1rem;
+    top: 1rem;
     border: none;
     background-color: inherit;
-    cursor: pointer;
+    color: $darkgray;
+  }
+
+  button[data-name='close-button']:hover {
+    color: $darkgray-xx-dark;
+  }
+
+  button[data-name='close-button']:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px $neutral;
   }
 
   div[data-name='modal-dialog'] {
